Ported tests to JUnit 5